--- a/PrintIngredientsList/FormMain.resx
+++ b/PrintIngredientsList/FormMain.resx
@@ -145,7 +145,7 @@
   <data name="button4.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        vgAADr4B6kKxwAAAAnhJREFUWEftljtoFFEUhgcULQIKPhAUjCSgYCDWosWCy7532YVspRux8FFpF+zE
+        vAAADrwBlbxySQAAAnhJREFUWEftljtoFFEUhgcULQIKPhAUjCSgYCDWosWCy7532YVspRux8FFpF+zE
         CFELIaQJ6ZTUgXRGUitahCi4aJFAxAiRWBhRfKPfv57iOiS7s7MzafTAx87MPef/z7175+56/yNMZLPZ
         vblc7hw8gPv5fP5ssVjcY8PxRiKR2FoqlU5gOg2fjOlCoXBSY5YWXzDjbmZ7HdNX8MvQ9XAmkzlkafFE
         rVbrYqYDmD2Gn2YudP2Er2YglUp1WXr0wQyPYDTGKrx1zBvYszHlWHq0oU3G7C9hUneNfdRp5GKlUtlt
@@ -162,7 +162,7 @@
   <data name="button2.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        vgAADr4B6kKxwAAAAmhJREFUWEfFl01oE0EYhgOKHgoKaik0oJKAgoH0LO0hYMh/QhbMySTSQ6un9hZ6
+        vAAADrwBlbxySQAAAmhJREFUWEfFl01oE0EYhgOKHgoKaik0oJKAgoH0LO0hYMh/QhbMySTSQ6un9hZ6
         k1Zo9SAEL8Gb4lnwpuJZ0YOoENGDgqUtKHowpSVqK/aZ+C2ZLEmamN3NCw+bdma+95udn53xOK14PH4E
         ziWTySV4B7VUKnVLip1TLpc7hJkPs0uJRKLC7/ewCTvwSqo5o0wmM47xBVjB7DV8g78adalqrwzDOB6L
         xYIYlzB5DOuaaQvSxB5FIpERXvMZAs/CXfgIdWXUCWk6mBjnA/T2JBhQhiqJ/GhnaEVC/L8Y5zEMz2N4
@@ -178,7 +178,7 @@
   <data name="button3.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        vgAADr4B6kKxwAAAAn1JREFUWEftlj1oFFEUhRcULQQFfxAUVBJQMBBr0WLBZf932YVsZTZiobHSLtiJ
+        vAAADrwBlbxySQAAAn1JREFUWEftlj1oFFEUhRcULQQFfxAUVBJQMBBr0WLBZf932YVsZTZiobHSLtiJ
         ClELYUkT0impA+mMpFa0EBUSTJFAggqRWCRiMP6h34lXGF92dWac2SoHzu7Oe/eec+/bN28msYlisXi3
         UCg8g5/gjzbxM5Rnb4KPFfgVNguMjfl8/gtsqIBp+ME72SausPo3VcAN+Moz0RbS/Uwul+tL8HGci2EG
         l9ygGLlE98PyVgE7uTjL4HMnKE7Kq1fe63cCFx0UcYvvNxYQJ1/jNch3x7q5UKvVtjF4hsEJGOftuIbP
@@ -195,7 +195,7 @@
   <data name="button1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        vgAADr4B6kKxwAAAAkhJREFUWEe9l09IFFEcxxcKOwQFpgQGKRsUGOhZ9LDQsv932QX3lGt4SD3pTbyJ
+        vAAADrwBlbxySQAAAkhJREFUWEe9l09IFFEcxxcKOwQFpgQGKRsUGOhZ9LDQsv932QX3lGt4SD3pTbyJ
         ClYHQbos3ozOgjcVz0odlgqMPCgoFRR50FC0VPQz8tuZ5zCs+2fmfeHDW/G99/2+eX/mja+oeDzeE4vF
         ZhKJxGQ0Gu2FVrgj//ZeBCgQ4D/lPuUGQfJGKPAT5JZU804Y/YNzhT/wiSBT8CyVSjVJVW9kM1f5ToAl
         nsIIIdrC4XC9NHFXDsYqx0zLJrwjzMtIJPIkFArdlqbuyMHUiT1Yl8WaoWzOZrM3pIvaZDO6jl+wSoAx
@@ -206,6 +206,19 @@
         iMP8re1lZL6OKXvT6bS217F5IWHUQ6D1QmJcydZ45HqvZBjuYbgOl5dSeKjrUnoEmzAH/QR5rPNabmyr
         JUY7wupuK3tbVSpMjFGqxsVPs1eg5dOsACfwF77xmPMYP+e3n3muk2reCbNpzIpn9wR7WcPnuc93AVqs
         A/ryqvajAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <data name="toolBtnSave.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAADESURBVEhL7ZZBCgJBDATnH+pP9K74KY8+SHyQ+g/tCAMh
+        JJNpzW23oA4LqZ7rtpVFcoYv+FaOsDf9+/L9InjCHndH2BvdUY/rsDvC3uhOvMIpbCiOsDe660497oUj
+        7I3utCk/RQqvF1O8aA9nOECvF1O8qMIUL6owxYsqTPGiClO8qMIUG9zgBs6yhXdod1JsIEMsO2h3Uugg
+        gN6hgwB6hw4C6B06CKB36CCA3qGDAHrH+/X51wdMOcHKx+XRI1xZFK19AKg9J4KD7yq2AAAAAElFTkSu
+        QmCC
 </value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
