タイトルの幅とフォントサイズ編集追加 フォントサイズを小数点１桁まで表示するようにした。

--- a/PrintIngredientsList/FormMain.resx
+++ b/PrintIngredientsList/FormMain.resx
@@ -722,30 +722,30 @@
   <data name="toolBtnReload.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAVDSURBVFhHtZd9aNVlFMfvVdNejLqSNiutmUsSLeZcSaxG
-        7L5su3e7Xd1MDXVU7J/hgmaJWYxQKsiMokmBovSiQkWKhhVhoKGV1HQpaq2cWfMlV7NZc662Pt/fPTf2
-        cmf77c4DX87ze855zjnP85znPM/Pkwrl5uYOi0aj14JxoVDoFjDW7/dfU15efhlib1zrElJ+fv7oSCTy
-        QDgcfragoOBF+FKwsLCw8H5kk+FppaWlw0198AkHt+PwNVCPw5PgGIEc4vtz8BbtKnTupu0jkKE2bPDI
-        AqgBDcFg8C+25B/anaAdnFUwBPUmevORT3S9GtXV1UO0n+LW1Y20BSCGg5U43AZqcfojOEMwbQokLy/v
-        N/gX6FSzXdNKSkqusOF9k5ZLyaQZFhcXZxL9KBN1IyUhxn2BQCAd49noz8T54+B1OQVNOTk5fysYAv2O
-        71XwTEvS5CQhhm4Gs8Fq8BKD7kB00axW0ARyVSwWG4P+ZJw9xNi34Q3gAmjn+yD8SQWcNCe0PEQ/FcXF
-        KO4Ap8T5vq+vbUhGMq7jSSA5jF/F+O/hCqIV+zvBPNo+U48P0DLLEVjJwG+VVCh1gD3Ar+U29X4TYy7H
-        VjbjX8Xez7KH8zP4WKstc7YC58MRTAALEGxiwDHailbZLGgvQ1lZWX3v20VIQeA0gI3tNimdkIP4WqwC
-        pkzWfi1FaTe8mQGJo+QAxa9AGL0RZtM1YedGUKWVhWty58BmViHowfGjfNSCVvCf4y7YC4o1E7PnmrTU
-        2MjC1xvw06CDSR2AP6NiMpfGJ6CRdteld8Cgr+mfSbRXmr0BEbMfja0KbB022ydof+DhnN9AI0rHOpRO
-        Jhx3wTfIZ7MCI83WgMhyIYKtPbbNZ0GdZF4azh4h1HHpREFVTPnQxqB99M8l0KsdSwMnL7amY+s9bCsH
-        tOUnHImuUQRP0FEPlHjH4Vvhu8CHIKoi4yinQPiZhN0aTsOvcBWmFkdA2dU2LEHhBwUA6viuJOJZtOeA
-        jKSVyyX1GYDKpxySA6rXSrxDoILEG6+KplrhKKZGPbfgPGh0JHKCoMzOaaeqFsrPFxUVpTsKg0CJJAS7
-        E0mIz/2O0KphCOFOeDtb8gfCTSqXg7H0op7HUJOUDxM7J2EKWAOcKxSu4vQwikmvYjekMs7+T8OerunT
-        sk8wqi+VpuLxkOVjFKG2wQJo4ns9/K5UcwBHaWAR9vZhT8Wume938DXDVOJRqgOljVJQECgdBkvov8nU
-        XJNt773gfWy12OT0LniM7zRTi5M6QCXCOqBbS5mqd0EM+Ny8CUTmfAqTWq4jruTDfjN9G0jwGb1eRupg
-        tpkorUZJj5FOBv6OgS0k5HwGTdSd8H+B4GgYdvRe1INkBdCENBlB13u5ttzUuxNRj8RRBKXtGPoTrkeJ
-        Xrhfwl8guDBleRI616s6WjBezVbHmaQdh+50Aq1AfzNowE6bJZ6e7E+BDAUZ99ibvCpMKOmB8qlWQEsn
-        I/Qdx8hntkJVOJmlpYQrw/30P4J8OdhI+wBoob/DxqrMvyLdXkvfk5jNUAanMaAErodlPTNLvPtbaauU
-        HsWRsnoH/CO4nm5HaP8C102nHFK5bQJ6U6zAeXa/nuUiLa1VyHvA0+BjcBQkMll3hrZHx+q8BZe4wi9Y
-        kLXorwVlugfICfevKg0i8vEgiKFl4F0z/BNQojbp58McNoJ6+nfBa+Bl8DuRjSJA14/aruTV0unxoj1k
-        mR/E+DL4y0DPrDVwOXwOXgEC4Db6fak67kXKDz1OdIWTgOk4yZAzVupWW6nrbKn78Xvu8fwL4MXx/Rvb
-        omsAAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAVDSURBVFhHtZd7bNRFEMfv5OUDo0cEqwJapBAJakqpJUZs
+        SO/R9q49DloQDdqo6T+NNbEoQTSNgYiJPIKxRBOIxgeQqBECBCUEEjAgGi1WCKhVimhBpFqsWkq19fP9
+        3Zzp44r99eok38z+dmZnZndnZ/fnSYVyc3OHRqPRa8G4UCh0C7jB7/dfU15ePgyxN671P1J+fv7oSCQy
+        OxwOP1dQUPAifAl4qLCwcBayKfC00tLS4aY++ISD23D4MqjH4RlwkkCO8f0ReJN2FTo5tH0EMsSGDR5Z
+        ADWgIRgM/smW/E27E7SD8wqGoN5AbyHyia5Xo7q6+jLtp7h1dSNtAYjhYCUOt4NanH4HzhFMmwLJy8v7
+        Bf4xOtVs17SSkpIrbHjfpOVSMmmGxcXFmUQ/ykTdSEmIcV8gEEjHeDb6c3D+BHhFTkFTTk7OXwqGQL/m
+        ezU805I0OUmIoZvBPLAOrGLQHYgumdUKmkCuisViY9CfgrMHGPsWvAFcBO18H4U/pYCT5oSWh+hvR3ER
+        invAT+J839vXNiQjGdfxJJB7GL+a8d/AFUQr9veB+2n7TD0+QMssR2AlA79UUqHUAQ4Cv5bb1PtNjLkc
+        W9mMfwl7P8gezs/hY4O2zNkKnA9HMAE8iGAzA07SVrTKZkF7GcrKyup73y5BCgKnAWzstEnphBzF1yIV
+        MGWy9msJSgfgzQxIHCUHKH4CwuiNMJuuCTs3gSqtLFyT+x1sYRWCHhw/ykctaAX/Ou6CT0GxZmL2XJOW
+        GhtZ+HoVfhZ0MKkj8GdVTBbQ2AUaaXddegcM+oz+OUR7pdkbEDH70diqwNZxs32a9vsezvmNNKJ0vIbS
+        mYTjLvgc+TxWYKTZGhBZLkSwddC2+Tyok8xLw9kjhDounSioiikf2hh0mP4FBHq1Y2ng5MXWdGy9i23l
+        gLb8tCPRNYrgSTrqgRLvFHwbfD/YAaIqMo5yCoSfydit4TT8DFdhanEElF1tw2IUvlUAoI7vSiKeS/s+
+        kJG0crmkPgNQ+ZRDckD1Wol3DFSQeONV0VQrHMXUqOcWXACNjkROEJTZOe1U1UJ5RVFRUbqjMAiUSEJw
+        IJGE+PzCEVo1DCHcB29nS35DuFnlcjCWXtTzGGqS8mFi5yRMBeuBc4XCVZweRjHpVeyGVMbZ/2nY0zV9
+        VvYJRvWl0lQ8HrJ8jCLUNlgATXy/Dr8r1RzAURp4DHuHsadi18z32/iaYSrxKNWB0iYpKAiUjoPF9I81
+        Nddk2zsTvIetFpuc3gWP851manFSB6hEWAd0aylT9S6IAZ+bN4HInE9lUst0xJV82G+mbyMJPqPXy0gd
+        zDYTpXUo6THSycBfMbCVhFzIoIm6E/4rEBwNxY7ei3qQLAeakCYj6Hov15abenci6pE4iqC0E0N/wPUo
+        0Qv3EPwFggtTliejc72qowXj1Wx1nEnacehOJ9AK9LeABuy0WeLpyf40yFCQcY+9yavChJIeKLu1Alo6
+        GaHvFEb22gpV4WSulhKuDPfT/wjyZWAT7SOghf4OG6syv1a6vZa+JzGbIQxOY0AJXA/LemaWePe30lYp
+        PYEjZfUe+AdwPd2+ov0jXDedckjltgnoTbEc59n9epaLtLRWIe8Gz4APwQmQyGTdGdoeHasLFlziCr9o
+        QdaivwGU6R4gJ9y/qjSIyMeDIIaWgnfM8PdAidqknw9z2Ajq6d8Pr4GXwe9ENooAXT9qu5JXS6fHi/aQ
+        ZZ6P8aXwNUDPrPVwOXweXgECYBL9vlQd9yLlhx4nusJJwHScZMgZK3WrrdR1ttT9+D33eP4BQoTxhdT9
+        gXEAAAAASUVORK5CYII=
 </value>
   </data>
   <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
