レイアウトファイルが保存されない不具合修正

--- a/PrintIngredientsList/FormMain.resx
+++ b/PrintIngredientsList/FormMain.resx
@@ -656,33 +656,34 @@
   <data name="toolBtnEditDatabase.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAYgSURBVFhHrZdpbNZFEIdblatcVkBOUcoRbpRCacpRQ0/6
-        9oQWQiyWQ6shYETkUMCKIoJRoYqCEAlGQEEONYAoXjFqvAiSCNHET8QPJsYEo00DiPV5Xva1BAq04Ca/
-        zOzu7Mzs7szs/x93jS0+OTm5WVZWVutIJJJYUlJyc15eXpfs7Oyb8vPzE9LT029Q5pzo/9Cqqqqu05hG
-        MNgXJGMoA0xibNaECRMeYmwh/H3wk+DvVCY3N3dgUVHRLZmZme3VEdQ1qcWjpAXojbFisADF1RjZgbF3
-        BP290D3Q3WBXwE6wnfHN0BXQcp0pLS1tpc5zqq/Q9Bjvb8TYaBSsxPh+lO2D38JYNfxy+LlgKnwOcNeF
-        9KczPx9+Ffw2cJD+e9B1jOWhp+MVT6Ouri7e+2TR5KDkEIs1ehdILigo6MOOeqissLCwbVlZWXNwfWpq
-        aiudZr5zTk7ObcwPVwcOeArq0JHprOkWTDXcCKKWLM5ggTv+FMxD6SCMtmvKXSqLY228Qg2DPZ4kmBFE
-        Gm4ZGRkdEK7CgaMaZ0FPdximm9x0BF2JIBN9+8HBMNVwQ7A7QlvB9/Ap12L8/EY29ETnW+C3MNRw834R
-        egPjx+ELOIGEMHXVzThBVyp630dvbRiubxYPDHX0/hHshOBS8BnYyHiGY1dzEq6hhlioRmHYzDgGTofp
-        +maxYKIIobHw3eAHgGn0X4C+Ama5AzNAhRamysrKZiy9MK+jVdJsMHbIgBGsnY2e54Oerxs8geLi4g4I
-        L2RyO/QejFl8TLM76M9n4Vqwnvnl9O+FluDMeGRGIjuU/mBSdxj8SE+MfgXyD4PVQMMLWJcPfRfUBLP1
-        TQeYqAInWHwE+hgLhpSXl7dGqTGRRv9+x4FKLSw6VI3BldDHGVsJ1sBvAJtwcDl0JmPjPA2yK4n+Lvo1
-        cSqHGRUDRrKhm8BJhM6An8FLYCxIZN6S3Ak+yZrgzpFVcTZjeZxUBJ22LOTSnYfv5xoD0FS0j+w+UGuq
-        vQ6+Og/fofAXqMbr4P8Gv8K/DZ3mDsIrF2vxBpiOGQ/wbZBJsH9hsGocpzujZyr4BpzSgSMaugL+AX+x
-        4FuwCOUDQ+A1qmk4LS2tLY71Z/0sYG05jM7oCTTGgShYdBr6E3QNGGX9R3+8BjgVS207dt0+xFEXT8vj
-        hvoWTATG1lZ0VEM/ATVNckCw6BQ4DBZjsLdPKwat8REMTYGasjPhDdR5oAreYF2DM09C/W4Yj4xX2jQH
-        WOAJHIc+C6In4I4ZKwE+yy8CU80M0NhijM3BAT9OUkBfT8cXEv5cFsB8Dv44H0z8Cc7CxwyfBSfBl8BH
-        qb9Fxvs1Fuj3RG4wdDgGR8APUwaa5JPr1XhNyhuYyqLnILQ2DuYpGDMhCvpvQr+A1kBjWXACGDgTVXhh
-        dDem6YAnZgCj90F0HYOeiSMtetGx3EZB34diLZO/g1r4H6CrQAqLe6jA3fEB2hXq43S5TytTtLkfNQYj
-        OkrB0+j0M+6o+oNcfQsRbJX7EYGPwBwXG2wah7dMPwPm46xvRgpjQ5ShDvTyOqTBoFeRga7p8MugrwEz
-        aDE4BC5Zio1eAy0SjryNxcc5nLBSLgEGm9eyBbwMVmN0GYYWQh/BsNGvjs1gHVhC3wwZ5ltBfw+42AGj
-        mgnkIoN9GaFJKMzSuPdotWP+VsYMtjL4eVB39wQwnlboAHQOfYvOZPgUrxqa6EZwoA/jOnDxB0lsp9Jg
-        zAKyDe+nGAOOKxcrPpZW5swCHe0ngrHujEc/VmMZIHUMPcbCx8LxSzaNITwUB14FxoPHO2TMmDGJMaWN
-        aX5dYzhBJ0EF2K0+xh4IIpduONAC4XHAyLV8rsOJGWYL6ENR6WqUe1rWBJ3WmGNmikZ1mnVFUIvTh+AA
-        mOtJBTOXbxUVFS1ZPDooOIDSD8IuohEN74dJGQqzoP6YWBkrwaPgOWQ2Av+eXLsBuabXEysfi5NQZEws
-        hfebwYdlBzveCR/7HdOxvVBrvadmsK0HpvZUjA8yLlDZ6Cv8r8UCT+8x6tN6O0ijj73I3cAKtwjM1hjI
-        BX7oDDCAQZN+aBrVglMtTVniIPp7bha5S6sgIpeplHFx/wJzEpB8x6KGWAAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAYySURBVFhHrZd5bFVVEIdbla1sVkBWUVog7CiF0pSlhteN
+        vq7QQojFsmg1BIyIbAJWFFmMClUUhEgwAgpCAQOIomKMGjeCJEI08S/iHybGBKOkAdT6fY/7bAMF+sCT
+        /DJzzpntnDsz9964GxzxKSkpzbKyslqHw+HEkpKS2/Py8rpkZ2fflp+fn5CRkXGLMhdF/4dRVVV1k850
+        gsM+IAVHITCRtZnjx49/jLUF8A/BT4S/V5nc3NwBRUVFd2RmZrbXRmAuphGPkRYgGWfFYD6Gq5nvxNF+
+        gdO90BrW94DdAXaBHextga6AlhtMaWlpK21eNH2NYcREfyvGR2FgJc4PYuwA862gGn4563PAFPgc4KkL
+        mU9jfx78avjt8Idx/h78etbysNPxmrdRV1cX7/NEaVJg5AjKOr0PpBQUFPTGaA+NFRYWti0rK2sObk5L
+        S2tl0Ox3zsnJuYv9YdpAf0Vgw0CmodMtcNX4IIlaohxC4QAKn4C5GB2I03axPEtlCawNesk6JogabxJM
+        D0QaH6FQqAMKVeCEzlHo6QmD7ZiHgXCYRJCJvYM+lmCr8YFgdwS3IfgdfOqNOG84qIae2H0Hu78GS40P
+        ny9Cb+H8FHwBN5AQbF33ME+wlUYA72O3NliuHzYPHHX0+SPYCcGlBPEpdBPrIdeu5ybUoYfYqEbi2Mo4
+        Cc4H2/XDZsFGEUJj4LvB9wdTmb9EIK/Bz/QEVoAGbUyVlZXNUL20riNd0mowd9Adju4s7LyoHfBVozdQ
+        XFzcgc0FbO6APoAzm49ldg/zeRhZBzawv5z5g9ASghmHzAhkhzAfROkOhR/hjTGvQP5xsAZ5DzAfmg99
+        F3o2cFs/DIBNM/80ysehTyI4uLy8vDVGezBPZ/6w62ANWA8MqBqHK6FPMV+JzFr4jWAzAS6HzmB9rLdB
+        dSUx3x0JQONsjIwCJ9nQzeAMQhfAT+AVMAYksm9L7gSfZE/w5MhqOJu1PG4qjE1HFnIZ7sP3VccEtBSd
+        I3sA1Fpqb4IvG+BbBH6G6rwO/i/wC/w+HE31BMFbLjriTTADMx/g2yCT4PzSZNU5QXfGzhTwNXbPGcBx
+        HV0D/4A/UfoGLMT4gCDxmjR0nJ6e3pbA+qE/E9hbjmEzcgNNCSACFM9Df0R5LfxI+z/243XArdhq23Hq
+        9kEedfG2kO0L9V0wAZhb27BRzfpRcDamAARK58AxDC3CYbKvVhza48M4mgy1ZGfAm6hzQRW8FbAWPMPc
+        74ZxyOyDxhYAyt7AKejzIHIDnpi1EuBr+WWMWuNWgM4Wwc8mAD9OUkEfb8c3JPzFKoD5DPzeECj+webf
+        8BHH8qydgX4B9aXUzybj8zUXmPdEbhB0GDLD4YcqA03yleuj8TEpb2Iqi9xhaG0cBp+FsRIiYP429HME
+        zkIjVcDaabANTNDgpdndlGEA3pgJjN1HsXUSeiGOsujFxHYbAXNfFOvY/A3Uwn8PXQ1SUe6hAU/HB2hX
+        qC+nq31aWaLN/ajhINZ+KVgF7yfcCe0HcvUjyGC73A8IfARmq2yy6RzeNv0cmEewvjNSWRusDH2gl49D
+        6pw9H0UIW9Pgl0HfYN0KMjeOgCu2YrPXRAsHV97G5uMeQdgpl6BsX7eet0JfBWb6MhwtgC7GsdmvjS3A
+        dr2EuRUy1HcFMjXg8gDMaoSRCw/yzQhNQjBL5z5Hux37d7JmspXBz4V6uqeB+eR332LobOY2nUnwqT5q
+        aKIHIYDeQQCXf5BETyoNnNlAthP9ZHPAdeWizcfWyp5VYKB9ReCsO+uRj9VoBUhdw4658LFw/YpDZwgP
+        IYDXgfng9Q4ePXp0YtRoU4Zf1zhOMEhQAfZoj7VHApErDwJogfBYHPsDchR+PXS61QJ601S6muXelj3B
+        oHXmmpWiU4NGrwhqc/oQHAJzvKnAzdVHRUVFS5RHBQYOYfQDT8E8ktHwfpiUYTAL6o+JnbESPMH+C2AT
+        svuZq7sRudj7iZ0P5SSMmRNL4f1m8MWykxPvgo/+jnm9e6H2em+thvkGYGlPwflA8wKTTX6E/41o4hk9
+        Tn213g3SmeMvfD+wwy0Es3QGcoEfOv1NYBDTD02TRhBUS0uWPIj8nltFntIuiMhVOmVc3L9bA4+/hlff
+        pgAAAABJRU5ErkJggg==
 </value>
   </data>
   <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
